// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`produces output with record values 1`] = `
<div
  id="app.page1.collection2"
>
  <div>
    app.page1.collection2
  </div>
  <code>
    {a1: {id: 'a1', a: 10, b: 'Bee1', c: true}, a2: {id: 'a2', a: 11}}
  </code>
</div>
`;

exports[`produces output with simple values 1`] = `
<div
  id="app.page1.collection1"
>
  <div>
    app.page1.collection1
  </div>
  <code>
    {green: 'green', blue: 'blue'}
  </code>
</div>
`;
